--- a/etc/xdg/waybar/config
+++ b/etc/xdg/waybar/config
@@ -4,8 +4,7 @@
         "reload_style_on_change": true,
         "modules-left": ["custom/notification","clock","custom/pacman","tray"],
         "modules-center": ["hyprland/workspaces"],
-        "modules-right": ["group/expand","bluetooth","network","battery"],
-
+        "modules-right": ["group/expand","network","battery"],
 
         "hyprland/workspaces": {
             "format": "{icon}",
@@ -25,7 +24,7 @@
             "escape": true
         },
         "clock": {
-            "format": "{:%I:%M:%S %p} ",
+            "format": "{:%H:%M:%S %p} ",
             "interval": 1,   
             "tooltip-format": "<tt>{calendar}</tt>",
             "calendar": {
